--- a/ShoppingList/app/src/main/res/values/strings.xml
+++ b/ShoppingList/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Shopping List</string>
+    <string name="version_text">Version:&#160;</string>
+    <string name="add_button">Add</string>
+    <string name="quantity">Quantity</string>
+    <string name="name_of_item">Name</string>
 </resources>
