--- a/ShoppingList/app/src/main/res/values/strings.xml
+++ b/ShoppingList/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_button">Add</string>
     <string name="quantity">Quantity</string>
     <string name="name_of_item">Name</string>
+    <string name="get_button">Get</string>
 </resources>
