--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -9,19 +9,50 @@
     <string name="new_crime">New Crime</string>
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
-    <string name="subtitle_format">%1$s crimes</string>
+    <string name="subtitle_format">%1$d crimes</string>
+    <string name="crime">Crime</string>
+    <string name="delete_crime">Delete crime</string>
+    <string name="crime_suspect_text">Choose Suspect</string>
+    <string name="crime_report_text">Send Crime Report</string>
+    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is not solved</string>
+    <string name="crime_report_no_suspect">there is no suspect.</string>
+    <string name="crime_report_suspect">the suspect is %s.</string>
+    <string name="crime_report_subject">Criminal Intent Crime Report</string>
+    <string name="send_report">Send crime report via</string>
+
+    <plurals name="subtitle_plural">
+        <item quantity="one">%1$d crime</item>
+        <item quantity="other">%1$d crimes</item>
+    </plurals>
 </resources>
 
 
 
 <!--
 Change Log
-
 - - - - - -
 Version x.x
 date xx-xx-2017
 
 
+
+
+- - - - - -
+Version 2.3
+date 24-03-2017
+Added a 'Suspect' to the crime.
+Added a button to select a suspect.
+Added a 'send crime report' button.
+Added camera button and a picture of the crime in the layouts.
+
+
+
+- - - - - -
+Version 2.2
+date 18-03-2017
+Adding SQLite database.
 
 - - - - - -
 Version 2.1
@@ -30,7 +61,8 @@ Added a Date Picker and a Time Picker that lets the user chose a time
 and a date for the crime.
 Added green colorAccent.
 Added 'add crime' icon in the toolbar.
-
+Added 'show/hide subtitle'. Added plural strings for one/more crimes.
+Added delete crime button.
 
 - - - - - -
 Version 2.0
